# SubStream-Protocol-Contracts

./: .gitignore  Cargo.toml  README.md  test_output.txt
.github/workflows/: test.yml
contracts/substream_contracts/: FUZZ_TEST_README.md
contracts/substream_contracts/fuzz/: Cargo.toml
contracts/substream_contracts/fuzz/fuzz_targets/: withdrawal_consistency.rs
contracts/substream_contracts/src/: lib.rs  test.rs  test_withdrawal_consistency.rs
contracts/substream_contracts/test_snapshots/test/: test_cancel.1.json  test_cancel_after_minimum_duration.1.json  test_cancel_before_minimum_duration.1.json  test_cancel_exactly_at_minimum_duration.1.json  test_group_cancel_collects_and_refunds_remaining_balance.1.json  test_group_subscribe_and_collect_split.1.json  test_migrate_tier_downgrade_prorates_refund.1.json  test_subscribe_already_exists.1.json  test_subscribe_and_collect.1.json  test_top_up.1.json
scripts/: generate_bindings.ps1  generate_bindings.sh
simulator/: Cargo.toml
simulator/src/: main.rs
